skills and tools

--- a/index.html
+++ b/index.html
@@ -31,11 +31,75 @@
         </section>
         <section id="abilities">
             <h2 class="title">What can I do?</h2>
-            <div id="skills">
-
-            </div>
-            <div id="tools">
-                
+            <div id="skillsContainer">
+                <div id="skills">
+                    <h3>Skills</h3>
+                    <div id="skillsbody">
+                        <div class="left">
+                            <div class="skill">
+                                <img src="img/java.svg" class="svg">
+                                <div><p>Java</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/html.svg" class="svg">
+                                <div><p>HTML</p>
+                                <p>Advanced</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/css.svg" class="svg">
+                                <div><p>CSS</p>
+                                <p>Advanced</p></div>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="skill">
+                                <img src="img/php.svg" class="svg">
+                                <div><p>PHP</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/javascript.svg" class="svg">
+                                <div><p>JavaScript</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/bootstrap.svg" class="svg">
+                                <div><p>Bootstrap 5</p>
+                                <p>Advanced</p></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="tools">
+                    <h3>Tools I use</h3>
+                    <div id="toolsbody">
+                        <div class="left">
+                            <div class="skill">
+                                <img src="img/git.svg" class="svg">
+                                <div><p>Git</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/vscode.svg" class="svg">
+                                <div><p>Visual Studio Code</p>
+                                <p>Advanced</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/apache.svg" class="svg">
+                                <div><p>Apache</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="skill">
+                                <img src="img/unity.svg" class="svg">
+                                <div><p>Unity</p>
+                                <p>Beginner</p></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="contact">
