--- a/index.html
+++ b/index.html
@@ -23,9 +23,24 @@
                 <button type="button" id="cv"><a href='#'>Download CV</a></button>
             </div>
         </section>
+        <section id="about">
+            <div class="title">
+                <h2>About me</h2>
+            </div>
+            <div id="about-me">
+                <div class="img">
+                    <img src="img/leo.jpg">
+                </div>
+                <div class="text">
+                    <h3>Hi! I'm Leo.</h3>
+                    <p>I'm a junior web developer. I started learning nine years ago. I was self-taught until two years ago, when I started studying web development. I've always thought programming is a little bit like magic: even the simplest tricks can amaze almost anyone. And even though I know how most of them are done... they still surprise me. Because knowing about something doesn't mean I cease to have that fascination that made me start learning.</p>
+                    <p>I'm a full stack developer. I have mainly used HTML, CSS, PHP and JavaScript. I have experience in building projects with a MVC architecture, linked to databases (MySQL). Aside from that, on my free time I like to play some Magic the Gathering or videogames. And, for the sake of fun and learning, I participated in some game jams.</p>
+                </div>
+            </div>
+        </section>
         <section id="projects">
             <div class="title">
-                <h2 class="title">Work</h2>
+                <h2>Work</h2>
             </div>
             <div id="projectContainer"></div>
         </section>
@@ -104,9 +119,9 @@
         </section>
         <section id="contact">
             <h2 class="title">Contact me</h2>
+            
         </section>
     </div>
-
     <script src="js/main.js"></script>
 </body>
 </html>
