react laravel msyql

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
                                 <div><p>CSS</p>
                                 <p>Advanced</p></div>
                             </div>
+                            <div class="skill">
+                                <img src="img/react.svg" class="svg">
+                                <div><p>React</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/laravel.svg" class="svg">
+                                <div><p>Laravel</p>
+                                <p>Intermediate</p></div>
+                            </div>
                         </div>
                         <div class="right">
                             <div class="skill">
@@ -82,6 +92,11 @@
                                 <img src="img/bootstrap.svg" class="svg">
                                 <div><p>Bootstrap 5</p>
                                 <p>Advanced</p></div>
+                                <div class="skill">
+                                    <img src="img/mysql.svg" class="svg">
+                                    <div><p>MySQL</p>
+                                    <p>Intermediate</p></div>
+                                </div>
                             </div>
                         </div>
                     </div>
