--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
                                 <div><p>Apache</p>
                                 <p>Intermediate</p></div>
                             </div>
+                            <div class="skill">
+                                <img src="img/mariadb.svg" class="svg">
+                                <div><p>Maria DB</p>
+                                <p>Intermediate</p></div>
+                            </div>
+                            <div class="skill">
+                                <img src="img/eclipse.svg" class="svg">
+                                <div><p>Eclipse</p>
+                                <p>Advanced</p></div>
+                            </div>
                         </div>
                         <div class="right">
                             <div class="skill">
@@ -134,7 +144,15 @@
         </section>
         <section id="contact">
             <h2 class="title">Contact me</h2>
-            
+            <div id="contact-div">
+                <form method="post" action="" id="contactForm">
+                    <label>E-mail:</label><br>
+                    <input type="email" id="email" placeholder="E-mail"><br>
+                    <label>Message:</label><br>
+                    <textarea></textarea><br>
+                    <button type="submit" id="send" value="Submit">Submit</button>
+                </form>
+            </div>
         </section>
     </div>
     <script src="js/main.js"></script>
