--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <h2>Web developer</h2>
             </div>
             <div id="buttons">
-                <button type="button" id="contact"><a href='#contact'>Contact me</a></button>
-                <button type="button" id="cv"><a href='#'>Download CV</a></button>
+                <a href='#contact'><button type="button" id="contact">Contact me</button></a>
+                <a href='#'><button type="button" id="cv">Download CV</button></a>
             </div>
         </section>
         <section id="about">
