--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="thanks">
             <h1>Thank you!</h1>
-            <a href="https://localhost/My_page"><button type="button">Return to home page</button></a>
+            <a href="https://leomanach-portfolio.netlify.app/"><button type="button">Return to home page</button></a>
         </div>
     </div>
 </body>
