--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="buttons">
                 <a href='#contact'><button type="button" id="contact">Contact me</button></a>
-                <a href='#'><button type="button" id="cv">Download CV</button></a>
+                <a href='files/Leo_Manach_CV.pdf' target="_blank"><button type="button" id="cv">Download CV</button></a>
             </div>
         </section>
         <section id="about">
