Skills and title

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section id="projects">
             <div class="title">
-                <h2>Work</h2>
+                <h2>Projects</h2>
             </div>
             <div id="projectContainer"></div>
         </section>
@@ -81,12 +81,12 @@
                             <div class="skill">
                                 <img src="img/php.svg" class="svg">
                                 <div><p>PHP</p>
-                                <p>Intermediate</p></div>
+                                <p>Advanced</p></div>
                             </div>
                             <div class="skill">
                                 <img src="img/javascript.svg" class="svg">
                                 <div><p>JavaScript</p>
-                                <p>Intermediate</p></div>
+                                <p>Advanced</p></div>
                             </div>
                             <div class="skill">
                                 <img src="img/bootstrap.svg" class="svg">
@@ -96,7 +96,7 @@
                             <div class="skill">
                                 <img src="img/mysql.svg" class="svg">
                                 <div><p>MySQL</p>
-                                <p>Intermediate</p></div>
+                                <p>Advanced</p></div>
                             </div>
                         </div>
                     </div>
