Experience and CV

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="text">
                     <h3>Hi! I'm Leo.</h3>
-                    <p>I'm a junior web developer. I started learning nine years ago. I was self-taught until two years ago, when I started studying web development. I've always thought programming is a little bit like magic: even the simplest tricks can amaze almost anyone. And even though I know how most of them are done... they still surprise me. Because knowing about something doesn't mean I cease to have that fascination that made me start learning.</p>
-                    <p>I'm a full stack developer. I have mainly used HTML, CSS, PHP and JavaScript. I have experience in building projects with a MVC architecture, linked to databases (MySQL). Aside from that, on my free time I like to play some Magic the Gathering or videogames. And, for the sake of fun and learning, I participated in some game jams.</p>
+                    <p>I'm a junior web developer. I started learning around 2015, first on a self-taught mode until I started my vocational training in 2020. I've always thought programming is a little bit like magic: even the simplest tricks can be surprising. That is also why I would love to continue on this path. It keeps my curiosity and eagerness to keep on learning.</p>
+                    <p>I'm a full stack developer. I have mainly used HTML, CSS, PHP and JavaScript. I have experience in building projects with a MVC architecture, linked to databases (MySQL). I've also developed with React in the front end and Node.js in the back end, using Express for the routing and PostgreSQL as a database. Aside from that, on my free time I like to play some Magic the Gathering or videogames. And, for the sake of fun and learning, I participated in some game jams.</p>
                 </div>
             </div>
         </section>
@@ -43,6 +43,39 @@
                 <h2>Projects</h2>
             </div>
             <div id="projectContainer"></div>
+        </section>
+        <section id="work">
+            <div class="title">
+                <h2>Work experience</h2>
+            </div>
+            <div class="experience">
+                <div class="job">
+                    <div class="date">
+                        <h3>March 2023 - June 2024</h3>
+                    </div>
+                    <div class="text">
+                        <h3>Web developer at ImaginaSounds</h3>
+                        <ul>
+                            <li>Development and manteinance of a musical streaming platform with 1000+ users. Solving of bugs and problems, as well as developing new features for it.</li>
+                            <li>Full-stack development with PHP 8 and JavaScript. I used a MySQL database, and sometimes did SSH connections to other devices from the server as well.</li>
+                            <li>Setting and use of Google Analytics, Google Tag Manager and Google Ads to help boost the page and to get new users.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="date">
+                        <h3>September 2021 - June 2022</h3>
+                    </div>
+                    <div class="text">
+                        <h3>Web developement intern at Kriter Software</h3>
+                        <ul>
+                            <li>Interface creation with Bootstrap as a framework.</li>
+                            <li>Frontend development with JavaScript and JQuery.</li>
+                            <li>Backend development with PHP, using OpenCart as a base for a custom framework.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="abilities">
             <h2 class="title">What can I do?</h2>
